--- a/Views/Auth/Login.cshtml
+++ b/Views/Auth/Login.cshtml
@@ -1,8 +1,23 @@
 ﻿@{
     ViewData["Title"] = "Login";
+    ViewData["CustomCss"] = "~/css/authViews.css";
 }
-<div class="text-center my-5">
+<div class="text-center my-5 px-3 container">
     <h1>Zeus Gym - Login</h1>
     <h2>Employee Portal</h2>
+
+    @* make a login form using bootstrap styles *@
+    <form method="POST" class="col custom-auth-form">
+        @* if on mobile, full width, if on medium screen device, 75% and desktop 50% *@
+        <div class="form-group text-start">
+            <label for="loginEmail" class="">Email address</label>
+            <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp" placeholder="Enter email">
+        </div>
+        <div class="form-group text-start">
+            <label for="loginPassword">Password</label>
+            <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary my-4 custom-btn-primary" asp-controller="Auth" asp-action="LoginSubmit">Submit</button>
+    </form>
 
 </div>
