--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -45,10 +45,20 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/account/settings">Account Settings</a>
                         </li>
-
-                        <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
-                        </li>
+                        @* conditionally render if user is auth *@
+                        @if (ViewBag.IsAuthenticated == true)
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/logout">Logout</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link" href="/login">Login</a>
+                            </li>
+                        }
+                        
                         
                     </ul>
 
