--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,7 +37,8 @@
                 <div class="offcanvas-body">
                     <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/admin">Dashboard</a>
+                            <a class="nav-link" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
+                            @* <a class="nav-link" href="/admin">Dashboard</a> *@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/admin/member/list">Members</a>
