--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                             @* <a class="nav-link" href="/admin">Dashboard</a> *@
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/admin/member/list">Members</a>
+                            <a class="nav-link" href="/admin/members">Members</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="/account/settings">Account Settings</a>
