--- a/Views/Member/Create.cshtml
+++ b/Views/Member/Create.cshtml
@@ -1,10 +1,70 @@
-﻿@{
+﻿@model gym_management_system.Models.GymMember
+
+@{
     ViewData["Title"] = "Create Members";
     // ViewData["CustomCss"] = "~/css/authViews.css";
 }
 
 <div class="text-center my-5 px-3 container">
     <h1>Zeus Gym - Create Member</h1>
+
+    <section class="my-5 ">
+        <form class="d-flex flex-column gap-4" method="post" asp-action="CreateSubmit" asp-controller="Member" >
+
+            <div class="d-sm-flex flex-sm-row flex-column gap-4">
+                @* input for Email *@
+                <div class="form-group col text-start">
+                    <label for="Email" class="mx-2">Email</label>
+                    <input type="text" class="form-control" id="Email" name="Email" placeholder="Enter Email">
+                </div>
+
+                @* input for UserName *@
+                <div class="form-group col text-start">
+                    <label for="UserName" class="mx-2">UserName</label>
+                    <input type="text" class="form-control" id="UserName" name="UserName" placeholder="Enter UserName">
+                </div>
+
+                
+            </div>
+
+            <div class="d-sm-flex flex-sm-row flex-column gap-4">
+                @* input for FullName *@
+                <div class="form-group col text-start">
+                    <label for="FullName" class="mx-2">Full Name</label>
+                    <input type="text" class="form-control" id="FullName" name="FullName" placeholder="Enter Full Name">
+                </div>
+
+                @* input for PhoneNumber *@
+                <div class="form-group col text-start">
+                    <label for="PhoneNumber" class="mx-2">Phone Number</label>
+                    <input type="text" class="form-control" id="PhoneNumber" name="PhoneNumber" placeholder="Enter Phone Number">
+                </div>
+                
+            </div>
+            <div class="d-sm-flex flex-sm-row flex-column gap-4">
+                @* input for Address *@
+                <div class="form-group col text-start">
+                    <label for="Address" class="mx-2">Address</label>
+                    <input type="text" class="form-control" id="Address" name="Address" placeholder="Enter Address">
+                </div>
+
+                @* input for DateOfBirth *@
+                <div class="form-group col text-start">
+                    <label for="DateOfBirth" class="mx-2">Date Of Birth</label>
+                    <input type="text" class="form-control" id="DateOfBirth" name="DateOfBirth" placeholder="Enter Date Of Birth" asp-for="DateOfBirth">
+                </div>
+            </div>
+            
+            <div class="w-100 my-4 d-flex flex-column flex-sm-row gap-3 justify-content-center">
+                @* submit button *@
+                <button type="submit" class="btn btn-primary custom-btn-primary px-4">
+                    Submit
+                </button>
+                <a asp-action="Index" asp-controller="Member" class="btn btn-primary btn-secondary ">
+                    Back to Members List
+                </a>
+            </div>
+        </form>
 
 
 </div>
