--- a/Views/Member/Delete.cshtml
+++ b/Views/Member/Delete.cshtml
@@ -6,5 +6,19 @@
 <div class="text-center my-5 px-3 container">
     <h1>Zeus Gym - Delete Member</h1>
 
+    <section class="my-5 ">
+        <form class="d-flex flex-column gap-4" method="post" asp-action="DeleteSubmit" asp-controller="Member" asp-route-id="@ViewBag.Member._id">
+
+            @* the hidden input for the id *@
+            <p>Are you sure you want to delete this member?</p>
+
+            @* the buttons to confirm or cancel the delete *@
+            <div class="d-flex flex-row gap-4 mx-auto">
+                <button type="submit" class="btn btn-danger custom-btn-danger">Confirm Delete</button>
+                <a asp-action="Index" asp-controller="Member" class="btn btn-secondary">Cancel</a>
+            </div>
+
+        </form>
+
 
 </div>
