added section headers in detail page

--- a/Views/Member/Details.cshtml
+++ b/Views/Member/Details.cshtml
@@ -17,7 +17,18 @@
         <p><strong>Member PhoneNumber:</strong> @ViewBag.Member.PhoneNumber</p>
         <p><strong>Member Address:</strong> @ViewBag.Member.Address</p>
         <p><strong>Member DateOfBirth:</strong> @ViewBag.Member.DateOfBirth.ToString("yyyy-MM-dd")</p>
+    </section>
 
+    <section class="my-4 px-4 py-3 text-start custom-border-primary">
+        <h2>Member Subscription Details</h2>
+    </section>
+
+    <section class="my-4 px-4 py-3 text-start custom-border-primary">
+        <h2>Member BioMetrics Details</h2>
+    </section>
+
+    <section class="my-4 px-4 py-3 text-start custom-border-primary">
+        <h2>Member Bills Details</h2>
     </section>
             
 </div>
