--- a/Views/Member/Delete.cshtml
+++ b/Views/Member/Delete.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@model gym_management_system.Models.GymMember;
+
+
+@{
     ViewData["Title"] = "Delete Member";
     // ViewData["CustomCss"] = "~/css/authViews.css";
 }
@@ -7,7 +10,7 @@
     <h1>Zeus Gym - Delete Member</h1>
 
     <section class="my-5 ">
-        <form class="d-flex flex-column gap-4" method="post" asp-action="DeleteSubmit" asp-controller="Member" asp-route-id="@ViewBag.Member._id">
+        <form class="d-flex flex-column gap-4" method="post" asp-action="DeleteSubmit" asp-controller="Member" asp-route-id="@Model._id">
 
             @* the hidden input for the id *@
             <p>Are you sure you want to delete this member?</p>
@@ -19,6 +22,7 @@
             </div>
 
         </form>
+    </section>
 
 
 </div>
